# llm-with-mcp

./: README.md  WeatherServer.py  client.py  mathserver.py  pyproject.toml  requirements.txt
