[project]
name = "BASIC_MCP"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=0.3.6",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.2",
    "mcp>=1.12.2",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "requests>=2.32.4",
]
